# PIC16F84-Simulator

./: .gitignore  CMakeLists.txt  CPU.cpp  CPU.h  ProgramMemory.cpp  ProgramMemory.h  README.md  imgui.ini  main.cpp
src/: main.cpp
src/simulator/: PIC16F84.cpp  PIC16F84.h  SimulationInterface.cpp  SimulationInterface.h
src/simulator/components/: CPU.cpp  CPU.h  DataMemory.cpp  DataMemory.h  ProgramMemory.cpp  ProgramMemory.h  Stack.cpp  Stack.h  instructions.h
src/ui/: editor.cpp  editor.h
test_files/: TPicSim20.LST  TPicSim20a.LST  TPicSim21.LST  TPicSim300.LST  TPicSim8.LST
